# simple-python-package

./: .pypirc  .pypirc.jfrog  .pypirc.pypi  pyproject.toml
greeting_name/: __init__.py  example.py
greeting_name.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: unit_test.py
